Implement world scanning system: ScanHandler (Java) + WorldStateCache (Python)
This implements a raw data serialization approach where the Java mod
dumps entity/block data and the Python pybot interprets relationships.

Java Mod (Agent) Changes:
- Add BlockLists utility with CONTAINER_BLOCKS, SIGN_BLOCKS, CROP_BLOCKS
- Add ScanHandler that scans entities/blocks in radius
  - scan_area: Everything (entities + blocks)
  - scan_containers: Chests/barrels + item frames
  - scan_entities: Just entities
- Register ScanHandler in MqttBotClientModInitializer
- Returns raw JSON data (no interpretation)

Python Pybot (Controller) Changes:
- Add entity_data.py: EntityData, ItemFrameData models
- Add block_data.py: BlockData, ContainerInfo, ChestLabel, SignData models
- Add scan_result.py: ScanResult wrapper
- Add world_cache.py: WorldStateCache with spatial indices
  - Stores raw entities/blocks
  - Interprets item frame → chest relationships
  - Builds indices (item_to_containers, spatial chunks)
  - Query API: find_containers_for_item(), find_containers_in_radius()
- Add world_module.py: StateModule integration for blackboard
- Add world model __init__.py for clean imports

Documentation:
- Add world-scan-integration-example.md with:
  - Architecture diagrams
  - Request/response examples
  - Integration with task system
  - Testing examples
  - Complete workflow examples

Benefits:
- Separation: Mod = dumb sensor, Pybot = smart brain
- Flexibility: Change interpretation without mod changes
- Performance: Infrequent scans, fast local queries
- Debuggable: Inspect raw data, test independently

This is the foundation for the chest sorting system where item frames
are used to label chests (visual + item ID in frame.item_id).